--- a/src/jade/main/nav.jade
+++ b/src/jade/main/nav.jade
@@ -1,5 +1,5 @@
 header.main-header
-    a.logo AnnSerba
+    a.logo(href="/") AnnSerba
     nav.navbar.navbar-static-top
         .container-fluid
             .navbar-header
