--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,7 +4,7 @@ html
         title AnnSerba
         link(rel="stylesheet" href='dest/css/bootstrap.min.css')
         link(rel="stylesheet" href='dest/css/AdminLTE.min.css')
-        link(rel="stylesheet" href='dest/css/_all-skins.min.css')
+        link(rel="stylesheet" href='dest/css/skin-yellow-light.min.css')
         link(rel="stylesheet" href='dest/css/style.css')
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css")
