--- a/dest/css/forYandexTask1.css
+++ b/dest/css/forYandexTask1.css
@@ -1,78 +1,68 @@
-.center-img {
-  margin: 10px auto;
-  box-sizing: border-box;
+body {
+  counter-reset: number;
 }
 .point-no-number {
-  position: relative;
-  z-index: 0;
-  display: flex;
-  box-sizing: border-box;
-  width: 100px;
-  height: 100px;
   background: #f3f8fa;
   border: 5px solid #87b7ce;
-  border-radius: 100%;
-  align-items: center;
-  justify-content: center;
-  margin: 5px auto;
-}
-.point-no-number img {
-  z-index: 100;
-  width: 65%;
-  height: 65%;
-  border-radius: 50%;
-}
-.point-number {
   position: relative;
-  z-index: 0;
   display: flex;
-  box-sizing: border-box;
+  align-items: center;
+  margin: 5px auto;
+  justify-content: center;
   width: 100px;
   height: 100px;
+  border-radius: 100%;
+}
+.point-no-number img {
+  border-radius: 50%;
+  width: 66%;
+  height: 66%;
+  z-index: 101;
+}
+.point-number {
   background: #f7f5f8;
   border: 5px solid #b09eb7;
-  border-radius: 100%;
+  position: relative;
+  display: flex;
   align-items: center;
-  justify-content: center;
   margin: 5px auto;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
 }
 .point-number img {
-  z-index: 100;
-  width: 65%;
-  height: 65%;
   border-radius: 50%;
+  width: 66%;
+  height: 66%;
+  z-index: 101;
 }
 .point-number:after {
-  display: flex;
-  box-sizing: border-box;
-  position: absolute;
-  z-index: 3;
   right: -2px;
   bottom: -2px;
   width: 40%;
   height: 40%;
   border-radius: 100%;
-  font-size: 1em;
-  font-weight: bold;
-  content: counter(circle-2-counter);
-  counter-increment: circle-2-counter;
+  position: absolute;
   color: #b09eb7;
   background: #f7f5f8;
+  content: counter(number);
+  counter-increment: number;
   align-items: center;
   justify-content: center;
+  display: flex;
+  font-size: 1em;
+  font-weight: bold;
 }
 .point-number:before {
-  display: flex;
-  box-sizing: border-box;
-  position: absolute;
-  z-index: 2;
   right: -7px;
   bottom: -7px;
   width: 50%;
   height: 50%;
   border-radius: 100%;
-  content: '';
+  position: absolute;
   border: 5px solid #b09eb7;
   border-top: 5px solid transparent;
   border-left: 5px solid transparent;
+  content: '';
 }
