--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -14,7 +14,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/annserba.github.io")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-warning
+        .box.solid.box-danger
             .box-header.text-center
                 h3.box-title KnowledgePortal
                 span  Course in AlvionEurope
@@ -24,7 +24,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/WEB-UI-1/KnowledgePortal")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-warning
+        .box.solid.box-success
             .box-header.text-center
                 h3.box-title TransportFare
                 span  Diploma
@@ -34,7 +34,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/TransportFare")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-warning
+        .box.solid.box-info
             .box-header.text-center
                 h3.box-title Applicant
                 span  Coursework project
