--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,6 +15,8 @@ html
                 include  main/skills.jade
             #Portfolio
                 include main/portfolio.jade
+            #AboutMe
+                include main/about-me.jade
 
     script(src='dest/js/jQuery-2.2.0.min.js')
     script(src='dest/js/jQuery-ui.min.js')
