--- a/src/jade/main/nav.jade
+++ b/src/jade/main/nav.jade
@@ -11,6 +11,8 @@ header.main-header
                         a(href="#Skills") Skills
                     li
                         a(href="#Portfolio") Portfolio
+                    li
+                        a(href="#AboutMe") About me
                 ul.nav.navbar-nav.navbar-right
                     li
                         a(href="https://github.com/AnnSerba")
