add change to portfolio

--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -3,9 +3,10 @@ h1.text-center Portfolio
 .row
     .col-xs-12.col-sm-6.col-md-3
         .box.solid.box-warning
-            .box-header
+            .box-header.text-center
                 h3.box-title For Yandex
                 span  courses tacks
+                p CSS, Jade
             .box-body
                 img(src="dest/img/yandex.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
@@ -18,6 +19,7 @@ h1.text-center Portfolio
             .box-header.text-center
                 h3.box-title KnowledgePortal
                 span  Course in AlvionEurope
+                p AngularJS, Bootstrap, less, mpm, Gulp, Bower
             .box-body
                 img(src="dest/img/AlvionEurope.jpg").img-responsive.center-block.img-portfolio
             .box-footer.text-center
@@ -28,6 +30,7 @@ h1.text-center Portfolio
             .box-header.text-center
                 h3.box-title TransportFare
                 span  Diploma
+                p UWP Windows 10
             .box-body
                 img(src="dest/img/TransportFare.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
@@ -38,6 +41,7 @@ h1.text-center Portfolio
             .box-header.text-center
                 h3.box-title Applicant
                 span  Coursework project
+                p .Net, Visual Studio, C#, MVC5
             .box-body
                 img(src="dest/img/applicant.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
