--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -6,11 +6,24 @@ h1.text-center Portfolio
             .box-header.text-center
                 h3.box-title For Yandex
                 span  courses tacks
-                p CSS, Jade
+                p less, Jade
             .box-body
                 img(src="dest/img/yandex.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
                 a.btn.btn-warning.margin(href="./dest/pages/forYandex.html")
+                    i.fa.fa-html5  web page
+                a.btn.btn-github.margin(href="https://github.com/AnnSerba/annserba.github.io")
+                    i.fa.fa-github  GitHub
+    .col-xs-12.col-sm-6.col-md-3
+        .box.solid.box-info
+            .box-header.text-center
+                h3.box-title For Russia cloud
+                span
+                p less, Jade
+            .box-body
+                img(src="https://hh.ru/employer-logo/1705895.png" style="padding:45px 0").img-responsive.center-block.img-portfolio
+            .box-footer.text-center
+                a.btn.btn-warning.margin(href="./dest/pages/forRussiaCloud.html")
                     i.fa.fa-html5  web page
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/annserba.github.io")
                     i.fa.fa-github  GitHub
@@ -36,8 +49,8 @@ h1.text-center Portfolio
             .box-footer.text-center
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/TransportFare")
                     i.fa.fa-github  GitHub
-    .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-info
+    .col-xs-12.col-sm-6.col-md-3.col-md-offset-2
+        .box.solid.box-success
             .box-header.text-center
                 h3.box-title Applicant
                 span  Coursework project
@@ -46,4 +59,15 @@ h1.text-center Portfolio
                 img(src="dest/img/applicant.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/Applicant")
+                    i.fa.fa-github  GitHub
+    .col-xs-12.col-sm-6.col-md-3.col-md-offset-2
+        .box.solid.box-info
+            .box-header.text-center
+                h3.box-title Spline
+                span  Coursework project
+                p  Visual Studio, C#, WindowsForms
+            .box-body
+                img(src="dest/img/Spline.png").img-responsive.center-block.img-portfolio
+            .box-footer.text-center
+                a.btn.btn-github.margin(href="https://github.com/AnnSerba/RandomAndSpline")
                     i.fa.fa-github  GitHub
