--- a/src/jade/pages/forRussiaCloud.jade
+++ b/src/jade/pages/forRussiaCloud.jade
@@ -1,9 +1,73 @@
 html
     head
         title AnnSerba
+        meta(charset="utf-8")
+        link(rel="stylesheet" href='../css/fileInput.css')
         link(rel="stylesheet" href='../css/bootstrap.min.css')
         link(rel="stylesheet" href='../css/AdminLTE.min.css')
+        link(rel="stylesheet" href='../css/style.css')
         link(rel="stylesheet" href='../css/skin-yellow-light.min.css')
+        link(rel="stylesheet" href='../css/bootstrap-datetimepicker.min.css')
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css")
     body.container
-        .box.box-solid
-
+        .content
+            .col-md-8.col-md-offset-2
+                .box.box-solid.box-primary
+                    .box-header.text-center
+                        h1.box-title Размещение заказа
+                    .box-body
+                        form.form-horizontal
+                            .form-group.col-xs-12
+                                label.control-label.col-xs-3 Услуги
+                                .col-xs-9
+                                    select.form-control
+                                        option услуга 1
+                                        option услуга 2
+                                        option услуга 3
+                                        option услуга 4
+                                        option услуга 5
+                            .form-group.col-xs-12
+                                label.control-label.col-xs-3 Ожидаемый срок
+                                .col-xs-9
+                                    #datetimepicker12
+                            .form-group.col-xs-12
+                                label.control-label.col-xs-3 Примечание
+                                .col-xs-9
+                                    input.form-control
+                            .form-group.col-xs-12
+                                label.control-label.col-xs-3 Файл
+                                .col-xs-9
+                                    .file-control
+                                        .file-upload(data-text='Выберите файл')
+                                            input(type='file')
+                            .form-group.col-xs-12
+                                label.control-label.col-xs-3 Текст
+                                .col-xs-9
+                                    textarea.form-control(rows='3', placeholder='' )
+                            .form-group.col-xs-12
+                                    .btn.pull-right.btn-success.margin Создать
+script(src='../js/jQuery-2.2.0.min.js')
+script(src='../js/moment.min.js')
+script(src='../js/moment-with-locales.min.js')
+script(src='../js/bootstrap.min.js')
+script(src='../js/bootstrap-datetimepicker.min.js')
+script(type='text/javascript').
+    $(function () {
+        $('#datetimepicker12').datetimepicker({
+            inline: true,
+            sideBySide: true,
+            locale: 'ru',
+            icons: {
+                time: "fa fa-clock-o",
+                date: "fa fa-calendar",
+                up: "fa fa-arrow-up",
+                down: "fa fa-arrow-down",
+                previous: 'fa fa-chevron-left',
+                next: 'fa fa-chevron-right',
+                today: 'fa fa-screenshot',
+                clear: 'fa fa-trash',
+                close: 'fa fa-remove'
+            }
+        });
+    });
