--- a/src/jade/pages/forRussiaCloud.jade
+++ b/src/jade/pages/forRussiaCloud.jade
@@ -13,9 +13,9 @@ html
     body.container
         .content
             .col-md-8.col-md-offset-2
-                .box.box-solid.box-primary
-                    .box-header.text-center
-                        h1.box-title Размещение заказа
+                .box.box-primary
+                    .box-header.with-border.text-center
+                        h3.box-title Размещение заказа
                     .box-body
                         form.form-horizontal
                             .form-group.col-xs-12
