--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -2,7 +2,7 @@
 h1.text-center Portfolio
 .row
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-warning
+        .box.box-warning
             .box-header.text-center
                 h3.box-title For Yandex
                 span  courses tacks
@@ -15,7 +15,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/annserba.github.io")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-info
+        .box.box-info
             .box-header.text-center
                 h3.box-title For Russia cloud
                 span
@@ -28,7 +28,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/annserba.github.io")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-danger
+        .box.box-danger
             .box-header.text-center
                 h3.box-title KnowledgePortal
                 span  Course in AlvionEurope
@@ -39,7 +39,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/WEB-UI-1/KnowledgePortal")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3
-        .box.solid.box-success
+        .box.box-success
             .box-header.text-center
                 h3.box-title TransportFare
                 span  Diploma
@@ -50,7 +50,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/TransportFare")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3.col-md-offset-2
-        .box.solid.box-success
+        .box.box-success
             .box-header.text-center
                 h3.box-title Applicant
                 span  Coursework project
@@ -61,7 +61,7 @@ h1.text-center Portfolio
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/Applicant")
                     i.fa.fa-github  GitHub
     .col-xs-12.col-sm-6.col-md-3.col-md-offset-2
-        .box.solid.box-info
+        .box.box-info
             .box-header.text-center
                 h3.box-title Spline
                 span  Coursework project
