--- a/src/jade/pages/forRussiaCloud.jade
+++ b/src/jade/pages/forRussiaCloud.jade
@@ -4,12 +4,12 @@ html
         meta(charset="utf-8")
         link(rel="stylesheet" href='../css/fileInput.css')
         link(rel="stylesheet" href='../css/bootstrap.min.css')
-        link(rel="stylesheet" href='../css/AdminLTE.min.css')
-        link(rel="stylesheet" href='../css/style.css')
-        link(rel="stylesheet" href='../css/skin-yellow-light.min.css')
         link(rel="stylesheet" href='../css/bootstrap-datetimepicker.min.css')
+        link(rel="stylesheet" href='../css/AdminLTE.min.css')
+        link(rel="stylesheet" href='../css/skin-yellow-light.min.css')
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css")
+        link(rel="stylesheet" href='../css/style.css')
     body.container
         .content
             .col-md-8.col-md-offset-2
@@ -46,7 +46,7 @@ html
                                 .col-xs-9
                                     textarea.form-control(rows='3', placeholder='' )
                             .form-group.col-xs-12
-                                    .btn.pull-right.btn-success.margin Создать
+                                    .btn.pull-right.margin.btn-flat.btn-success Создать
 script(src='../js/jQuery-2.2.0.min.js')
 script(src='../js/moment.min.js')
 script(src='../js/moment-with-locales.min.js')
