--- a/dest/css/fileInput.css
+++ b/dest/css/fileInput.css
@@ -25,8 +25,8 @@
   color: #333;
 }
 .file-upload:hover:after {
-  color: #333;
-  background-color: #e6e6e6;
+  background-color: #337ab7;
+  color: #fff;
   border-color: #d2d6de;
 }
 .file-upload:active:after {
