--- a/src/less/fileInput.less
+++ b/src/less/fileInput.less
@@ -26,8 +26,8 @@
   color: #333;
 }
 .file-upload:hover:after {
-  color: #333;
-  background-color: #e6e6e6;
+  background-color: #337ab7;
+  color: #fff;
   border-color: #d2d6de;
 }
 .file-upload:active:after {
@@ -35,7 +35,6 @@
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
-
 .file-upload:before {
   content: attr(data-text);
   position: absolute;
