--- a/src/less/style.less
+++ b/src/less/style.less
@@ -9,3 +9,11 @@ html, body{
 textarea{
   resize: vertical;
 }
+.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover,
+.bootstrap-datetimepicker-widget table td.today:before{
+background-color: #3c8dbc;
+}
+.bootstrap-datetimepicker-widget table td, .bootstrap-datetimepicker-widget table th,
+.bootstrap-datetimepicker-widget table td span{
+  border-radius: 0;
+}
