change color btn

--- a/src/jade/pages/forRussiaCloud.jade
+++ b/src/jade/pages/forRussiaCloud.jade
@@ -46,7 +46,7 @@ html
                                 .col-xs-9
                                     textarea.form-control(rows='3', placeholder='' )
                             .form-group.col-xs-12
-                                    .btn.pull-right.margin.btn-flat.btn-success Создать
+                                    .btn.pull-right.margin.btn-flat.btn-primary Создать
 script(src='../js/jQuery-2.2.0.min.js')
 script(src='../js/moment.min.js')
 script(src='../js/moment-with-locales.min.js')
