--- a/src/jade/main/about-me.jade
+++ b/src/jade/main/about-me.jade
@@ -25,9 +25,12 @@ h1.text-center About me
 
         .tab-content
             #contacts.active.tab-pane
+                p Education:
+                    a(href="http://sevsu.ru/") Sevastopol State University
+                p Specialty: information systems
                 p
                     i.fa.fa-map-marker  live in
-                    a(href="https://yandex.ru/maps/959/sevastopol/")  Russia, Sevestopol
+                    a(href="https://yandex.ru/maps/959/sevastopol/")  Russia, Sevastopol
                 p
                     i.fa.fa-envelope-o  e-mail: annserba94@gmail.com
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba")
