--- a/src/less/style.less
+++ b/src/less/style.less
@@ -9,7 +9,7 @@ html, body{
 textarea{
   resize: vertical;
 }
-.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover, {
+.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover{
 background-color: #3c8dbc;
 }
 .bootstrap-datetimepicker-widget table td, .bootstrap-datetimepicker-widget table th,
