add skils and portfolio

--- a/src/jade/main/about-me.jade
+++ b/src/jade/main/about-me.jade
@@ -12,9 +12,20 @@ h1.text-center About me
                 li.label.label-danger Html
                 li.label.label-warning JS
                 li.label.label-info Css
-                li.label.label-primary Node.js
-                li.label.label-success Angular
-                li.label.label-default C#
+                li.label.label-primary less
+                li.label.label-danger Sass
+                li.label.label-success jade
+                li.label.label-info git
+                li.label.label-danger Angular
+                li.label.label-success Node.js
+                li.label.label-default npm
+                li.label.label-danger gulp
+                li.label.label-warning bower
+                li.label.label-primary Scrum
+                li.label.label-success Jira
+                li.label.label-info WebStorm
+                li.label.label-dafault C#
+                li.label.label-primary Visual Studio
 .col-xs-8
     .nav-tabs-custom
         ul.nav.nav-tabs
