--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -32,7 +32,7 @@ h1.text-center Portfolio
             .box-header.text-center
                 h3.box-title KnowledgePortal
                 span  Course in AlvionEurope
-                p AngularJS, Bootstrap, less, mpm, Gulp, Bower
+                p AngularJS, Bootstrap, less, npm, Gulp, Bower
             .box-body
                 img(src="dest/img/AlvionEurope.jpg").img-responsive.center-block.img-portfolio
             .box-footer.text-center
