--- a/src/jade/main/about-me.jade
+++ b/src/jade/main/about-me.jade
@@ -1,6 +1,6 @@
 h1.text-center About me
 .col-xs-4
-    .box.box-default
+    .box.box-warning
         .box-body.box-profile
             img.profile-user-img.img-responsive.img-circle(src="dest/img/myPhoto.png")
             h2.profile-username.text-center Ann Serba
@@ -35,7 +35,7 @@ h1.text-center About me
                 a(href='#photo', data-toggle='tab') Photo
 
         .tab-content
-            #contacts.active.tab-pane
+            #contacts.tab-pane.active
                 p Education:
                     a(href="http://sevsu.ru/") Sevastopol State University
                 p Specialty: information systems
