--- a/src/less/style.less
+++ b/src/less/style.less
@@ -16,3 +16,6 @@ background-color: #3c8dbc;
 .bootstrap-datetimepicker-widget table td span{
   border-radius: 0;
 }
+.nav-tabs-custom ul.nav.nav-tabs li.active{
+  border-top-color: #f39c12;
+}
