--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -20,5 +20,6 @@ html
 
     script(src='dest/js/jQuery-2.2.0.min.js')
     script(src='dest/js/jQuery-ui.min.js')
+    script(src='dest/js/scroll.js')
     script(src='dest/js/bootstrap.min.js')
     script(src='dest/js/app.min.js')
