--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,9 +10,9 @@ html
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css")
     body.skin-yellow-light
         include main/nav
-        .content
-            #Skills
-                include  main/skills.jade
+        #Skills
+            include  main/skills.jade
+        .container
             #Portfolio
                 include main/portfolio.jade
             #AboutMe
