--- a/src/jade/main/about-me.jade
+++ b/src/jade/main/about-me.jade
@@ -1,6 +1,6 @@
 h1.text-center About me
 .row
-    .col-xs-4
+    .col-xs-12.col-md-4
         .box.box-warning
             .box-body.box-profile
                 img.profile-user-img.img-responsive.img-circle(src="dest/img/myPhoto.png")
@@ -15,7 +15,7 @@ h1.text-center About me
                     i.fa.fa-vk  VK
                 a.btn.btn-facebook.margin(href="https://www.facebook.com/anyserba")
                     i.fa.fa-facebook  Facebook
-    .col-xs-8
+    .col-xs-12.col-md-8
         .box.box-warning
             .box-body
                 strong
