--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,9 +15,11 @@ html
         .container
             #Portfolio
                 include main/portfolio.jade
-            #AboutMe
-                include main/about-me.jade
-
+        #AboutMe
+            include main/about-me.jade
+        footer.footer.github
+            .container
+                p.margin Personal site AnnSerba
     script(src='dest/js/jQuery-2.2.0.min.js')
     script(src='dest/js/jQuery-ui.min.js')
     script(src='dest/js/scroll.js')
