--- a/src/jade/main/skills.jade
+++ b/src/jade/main/skills.jade
@@ -1,5 +1,7 @@
-h1.text-center Skills
+
 .box.box-solid
+    .box-header
+        h1.text-center Skills
     .box-body
         .container
             #carousel-example-generic.carousel.slide(data-ride="carousel")
