--- a/src/jade/main/about-me.jade
+++ b/src/jade/main/about-me.jade
@@ -1,23 +1,24 @@
-h1.text-center About me
-.row
-    .col-xs-12.col-md-4
-        .box.box-warning
-            .box-body.box-profile
+
+.box.box-solid.with-border
+    .box-header
+        h1.text-center About me
+    .box-body
+        .container
+            .col-xs-12.col-md-4
                 img.profile-user-img.img-responsive.img-circle(src="dest/img/myPhoto.png")
                 h2.profile-username.text-center Ann Serba
                 p.text-muted.text-center Front-end and .Net developer
-            .box-footer.text-center
-                p
-                    i.fa.fa-envelope-o  e-mail: annserba94@gmail.com
-                a.btn.btn-github.margin(href="https://github.com/AnnSerba")
-                    i.fa.fa-github  GitHub
-                a.btn.btn-vk.margin(href="https://vk.com/annserba")
-                    i.fa.fa-vk  VK
-                a.btn.btn-facebook.margin(href="https://www.facebook.com/anyserba")
-                    i.fa.fa-facebook  Facebook
-    .col-xs-12.col-md-8
-        .box.box-warning
-            .box-body
+                p.text-center
+                    a(href="mailto:annserba94@gmail.com")
+                        i.fa.fa-envelope-o  e-mail: annserba94@gmail.com
+                p.text-center
+                    a.btn.btn-github.margin(href="https://github.com/AnnSerba")
+                        i.fa.fa-github  GitHub
+                    a.btn.btn-vk.margin(href="https://vk.com/annserba")
+                        i.fa.fa-vk  VK
+                    a.btn.btn-facebook.margin(href="https://www.facebook.com/anyserba")
+                        i.fa.fa-facebook  Facebook
+            .col-xs-12.col-md-8
                 strong
                     i.fa.fa-book.margin-r-5
                     |  Education
