--- a/src/jade/main/portfolio.jade
+++ b/src/jade/main/portfolio.jade
@@ -23,7 +23,7 @@ h1.text-center Portfolio
             .box-body
                 img(src="dest/img/yandex.png").img-responsive.center-block.img-portfolio
             .box-footer.text-center
-                a.btn.btn-warning.margin(href="https://annserba.github.io/AnnSerba.ForYandex.github.io/")
+                a.btn.btn-warning.margin(href="https://annserba.github.io/ViewForYandexTask1/")
                     i.fa.fa-html5  web page
                 a.btn.btn-github.margin(href="https://github.com/AnnSerba/forYandex")
                     i.fa.fa-github  GitHub
